Cleanup some logging